添加脱敏代码
