# api/api.bm.go
@@ -25,13 +25,13 @@ var _ *bm.Context
 var _ context.Context
 var _ binding.StructValidator
 
-var PathDemoPing = "/demo.service.v1.Demo/Ping"
-var PathDemoSayHello = "/demo.service.v1.Demo/SayHello"
-var PathDemoSayHelloURL = "/kratos-demo/say_hello"
-var PathDemoMediaIDGet = "/demo.service.v1.Demo/MediaIDGet"
+var PathFileSystemPing = "/demo.service.v1.FileSystem/Ping"
+var PathFileSystemSayHello = "/demo.service.v1.FileSystem/SayHello"
+var PathFileSystemSayHelloURL = "/kratos-demo/say_hello"
+var PathFileSystemMediaIDGet = "/demo.service.v1.FileSystem/MediaIDGet"
 
-// DemoBMServer is the server API for Demo service.
-type DemoBMServer interface {
+// FileSystemBMServer is the server API for FileSystem service.
+type FileSystemBMServer interface {
 	Ping(ctx context.Context, req *google_protobuf1.Empty) (resp *google_protobuf1.Empty, err error)
 
 	SayHello(ctx context.Context, req *HelloReq) (resp *google_protobuf1.Empty, err error)
@@ -41,49 +41,49 @@ type DemoBMServer interface {
 	MediaIDGet(ctx context.Context, req *MediaIDReq) (resp *MediaIDResp, err error)
 }
 
-var DemoSvc DemoBMServer
+var FileSystemSvc FileSystemBMServer
 
-func demoPing(c *bm.Context) {
+func fileSystemPing(c *bm.Context) {
 	p := new(google_protobuf1.Empty)
 	if err := c.BindWith(p, binding.Default(c.Request.Method, c.Request.Header.Get("Content-Type"))); err != nil {
 		return
 	}
-	resp, err := DemoSvc.Ping(c, p)
+	resp, err := FileSystemSvc.Ping(c, p)
 	c.JSON(resp, err)
 }
 
-func demoSayHello(c *bm.Context) {
+func fileSystemSayHello(c *bm.Context) {
 	p := new(HelloReq)
 	if err := c.BindWith(p, binding.Default(c.Request.Method, c.Request.Header.Get("Content-Type"))); err != nil {
 		return
 	}
-	resp, err := DemoSvc.SayHello(c, p)
+	resp, err := FileSystemSvc.SayHello(c, p)
 	c.JSON(resp, err)
 }
 
-func demoSayHelloURL(c *bm.Context) {
+func fileSystemSayHelloURL(c *bm.Context) {
 	p := new(HelloReq)
 	if err := c.BindWith(p, binding.Default(c.Request.Method, c.Request.Header.Get("Content-Type"))); err != nil {
 		return
 	}
-	resp, err := DemoSvc.SayHelloURL(c, p)
+	resp, err := FileSystemSvc.SayHelloURL(c, p)
 	c.JSON(resp, err)
 }
 
-func demoMediaIDGet(c *bm.Context) {
+func fileSystemMediaIDGet(c *bm.Context) {
 	p := new(MediaIDReq)
 	if err := c.BindWith(p, binding.Default(c.Request.Method, c.Request.Header.Get("Content-Type"))); err != nil {
 		return
 	}
-	resp, err := DemoSvc.MediaIDGet(c, p)
+	resp, err := FileSystemSvc.MediaIDGet(c, p)
 	c.JSON(resp, err)
 }
 
-// RegisterDemoBMServer Register the blademaster route
-func RegisterDemoBMServer(e *bm.Engine, server DemoBMServer) {
-	DemoSvc = server
-	e.GET("/demo.service.v1.Demo/Ping", demoPing)
-	e.GET("/demo.service.v1.Demo/SayHello", demoSayHello)
-	e.GET("/kratos-demo/say_hello", demoSayHelloURL)
-	e.GET("/demo.service.v1.Demo/MediaIDGet", demoMediaIDGet)
+// RegisterFileSystemBMServer Register the blademaster route
+func RegisterFileSystemBMServer(e *bm.Engine, server FileSystemBMServer) {
+	FileSystemSvc = server
+	e.GET("/demo.service.v1.FileSystem/Ping", fileSystemPing)
+	e.GET("/demo.service.v1.FileSystem/SayHello", fileSystemSayHello)
+	e.GET("/kratos-demo/say_hello", fileSystemSayHelloURL)
+	e.GET("/demo.service.v1.FileSystem/MediaIDGet", fileSystemMediaIDGet)
 }
