# api/api.pb.go
@@ -202,34 +202,34 @@ func init() {
 func init() { proto.RegisterFile("api.proto", fileDescriptor_00212fb1f9d3bf1c) }
 
 var fileDescriptor_00212fb1f9d3bf1c = []byte{
-	// 421 bytes of a gzipped FileDescriptorProto
-	0x1f, 0x8b, 0x08, 0x00, 0x00, 0x00, 0x00, 0x00, 0x02, 0xff, 0x7c, 0x51, 0x41, 0x8b, 0xd3, 0x40,
-	0x18, 0xdd, 0x74, 0xcb, 0x76, 0x33, 0x3d, 0x08, 0x73, 0x28, 0xd9, 0x6c, 0x49, 0xcb, 0x88, 0xb8,
-	0x97, 0x9d, 0xe0, 0x0a, 0x0a, 0x0b, 0x5e, 0xba, 0x95, 0x75, 0x41, 0x41, 0x22, 0x5e, 0xbc, 0xc8,
-	0xb4, 0xf9, 0x9a, 0x1d, 0x36, 0x93, 0x99, 0x66, 0xa6, 0x85, 0x5e, 0xfd, 0x0b, 0x5e, 0xfc, 0x11,
-	0xfe, 0x90, 0x1e, 0x05, 0xef, 0x45, 0xab, 0x27, 0x8f, 0xfe, 0x02, 0xc9, 0x24, 0x69, 0x41, 0x89,
-	0xb7, 0x79, 0xef, 0x7d, 0xef, 0xcd, 0x7c, 0x6f, 0x90, 0xcb, 0x14, 0xa7, 0x2a, 0x97, 0x46, 0xe2,
-	0x7b, 0x31, 0x08, 0x49, 0x35, 0xe4, 0x4b, 0x3e, 0x05, 0xba, 0x7c, 0xe4, 0x9f, 0x27, 0xdc, 0xdc,
-	0x2e, 0x26, 0x74, 0x2a, 0x45, 0x98, 0xc8, 0x44, 0x86, 0x76, 0x6e, 0xb2, 0x98, 0x59, 0x64, 0x81,
-	0x3d, 0x95, 0x7e, 0xff, 0x34, 0x91, 0x32, 0x49, 0x61, 0x3f, 0x05, 0x42, 0x99, 0x55, 0x25, 0xf6,
-	0x2b, 0x91, 0x29, 0x1e, 0xb2, 0x2c, 0x93, 0x86, 0x19, 0x2e, 0x33, 0x5d, 0xaa, 0xe4, 0x0a, 0x1d,
-	0xbf, 0x80, 0x34, 0x95, 0x11, 0xcc, 0xf1, 0x53, 0xd4, 0xce, 0x98, 0x00, 0xcf, 0x19, 0x3a, 0x67,
-	0xee, 0xe8, 0xfe, 0xef, 0xcd, 0x60, 0x30, 0x93, 0xb9, 0xb8, 0x24, 0x05, 0x4b, 0x86, 0x4b, 0x96,
-	0xf2, 0x98, 0x19, 0xb8, 0x24, 0x39, 0xcc, 0x17, 0x3c, 0x87, 0x98, 0x44, 0xd6, 0x40, 0x2e, 0x90,
-	0x5b, 0x85, 0x68, 0x85, 0x1f, 0xa0, 0xce, 0x95, 0xcc, 0x0c, 0x64, 0xa6, 0x0a, 0xea, 0xfe, 0xda,
-	0x0c, 0x3a, 0xd3, 0x92, 0x8a, 0x6a, 0x8d, 0x8c, 0x10, 0x7a, 0x05, 0x31, 0x67, 0x37, 0xe3, 0xe2,
-	0xea, 0x1e, 0x3a, 0x9a, 0xb1, 0x3b, 0xb8, 0x19, 0x97, 0x9e, 0xa8, 0x42, 0xb8, 0x8f, 0x5c, 0xc3,
-	0x05, 0x68, 0xc3, 0x84, 0xf2, 0x5a, 0x43, 0xe7, 0xec, 0x30, 0xda, 0x13, 0xe4, 0x21, 0xea, 0xee,
-	0x32, 0xb4, 0xc2, 0x1e, 0xea, 0x54, 0xb0, 0x4a, 0xa9, 0xe1, 0xc5, 0xe7, 0x16, 0x6a, 0x8f, 0x41,
-	0x48, 0xfc, 0x04, 0xb5, 0x5f, 0xf3, 0x2c, 0xc1, 0x3d, 0x5a, 0xb6, 0x42, 0xeb, 0xca, 0xe8, 0xf3,
-	0xa2, 0x32, 0xbf, 0x81, 0xc7, 0xcf, 0xd0, 0xf1, 0x1b, 0xb6, 0xb2, 0x4b, 0xe2, 0x13, 0xfa, 0xd7,
-	0x77, 0xd1, 0xba, 0xc1, 0x46, 0x7b, 0x8c, 0xba, 0xb5, 0xfd, 0x6d, 0xf4, 0xf2, 0x7f, 0x09, 0x7e,
-	0x93, 0xa4, 0x15, 0x09, 0x3e, 0x7c, 0xfd, 0xf9, 0xb1, 0xe5, 0xe1, 0x5e, 0x78, 0x97, 0x33, 0x23,
-	0xf5, 0x79, 0x31, 0x1a, 0x6a, 0xb6, 0x7a, 0x7f, 0x6b, 0x1f, 0x76, 0xbd, 0xab, 0xf4, 0x1a, 0x0c,
-	0x3e, 0xfd, 0x27, 0x69, 0xdf, 0xb7, 0xdf, 0x6f, 0x16, 0xb5, 0x1a, 0x9d, 0xac, 0xbf, 0x07, 0x07,
-	0xeb, 0x6d, 0xe0, 0x7c, 0xd9, 0x06, 0xce, 0xb7, 0x6d, 0xe0, 0x7c, 0xfa, 0x11, 0x1c, 0xbc, 0x3b,
-	0x64, 0x8a, 0x4f, 0x8e, 0xec, 0x66, 0x8f, 0xff, 0x04, 0x00, 0x00, 0xff, 0xff, 0x64, 0x7f, 0x47,
-	0xcc, 0xbe, 0x02, 0x00, 0x00,
+	// 426 bytes of a gzipped FileDescriptorProto
+	0x1f, 0x8b, 0x08, 0x00, 0x00, 0x00, 0x00, 0x00, 0x02, 0xff, 0x7c, 0x51, 0x41, 0x6b, 0x13, 0x41,
+	0x18, 0xed, 0xa6, 0xa5, 0x69, 0xbe, 0x1c, 0x84, 0x39, 0x84, 0x74, 0x1b, 0x36, 0x61, 0x44, 0xec,
+	0xa5, 0xb3, 0x58, 0x41, 0xa1, 0xe0, 0x25, 0xad, 0xd6, 0x82, 0x82, 0x6c, 0xf1, 0xe2, 0x45, 0x26,
+	0xd9, 0x2f, 0xdb, 0xa1, 0x3b, 0x3b, 0xd3, 0x9d, 0x49, 0x20, 0x57, 0xff, 0x82, 0x17, 0x7f, 0x87,
+	0xbf, 0xa2, 0x47, 0xc1, 0x7b, 0xd1, 0xe8, 0xc9, 0xa3, 0xbf, 0x40, 0x76, 0x76, 0x37, 0x01, 0x65,
+	0xbd, 0xcd, 0x7b, 0xef, 0x7b, 0x6f, 0xe6, 0x7b, 0x03, 0x1d, 0xae, 0x05, 0xd3, 0xb9, 0xb2, 0x8a,
+	0xdc, 0x8b, 0x51, 0x2a, 0x66, 0x30, 0x5f, 0x88, 0x29, 0xb2, 0xc5, 0x23, 0xff, 0x28, 0x11, 0xf6,
+	0x6a, 0x3e, 0x61, 0x53, 0x25, 0xc3, 0x44, 0x25, 0x2a, 0x74, 0x73, 0x93, 0xf9, 0xcc, 0x21, 0x07,
+	0xdc, 0xa9, 0xf4, 0xfb, 0x07, 0x89, 0x52, 0x49, 0x8a, 0x9b, 0x29, 0x94, 0xda, 0x2e, 0x2b, 0x71,
+	0x50, 0x89, 0x5c, 0x8b, 0x90, 0x67, 0x99, 0xb2, 0xdc, 0x0a, 0x95, 0x99, 0x52, 0xa5, 0xa7, 0xb0,
+	0xf7, 0x12, 0xd3, 0x54, 0x45, 0x78, 0x43, 0x9e, 0xc2, 0x4e, 0xc6, 0x25, 0xf6, 0xbd, 0x91, 0x77,
+	0xd8, 0x19, 0xdf, 0xff, 0x7d, 0x37, 0x1c, 0xce, 0x54, 0x2e, 0x4f, 0x68, 0xc1, 0xd2, 0xd1, 0x82,
+	0xa7, 0x22, 0xe6, 0x16, 0x4f, 0x68, 0x8e, 0x37, 0x73, 0x91, 0x63, 0x4c, 0x23, 0x67, 0xa0, 0xc7,
+	0xd0, 0xa9, 0x42, 0x8c, 0x26, 0x0f, 0xa0, 0x7d, 0xaa, 0x32, 0x8b, 0x99, 0xad, 0x82, 0xba, 0xbf,
+	0xee, 0x86, 0xed, 0x69, 0x49, 0x45, 0xb5, 0x46, 0xc7, 0x00, 0xaf, 0x31, 0x16, 0xfc, 0xe2, 0xac,
+	0xb8, 0xba, 0x07, 0xbb, 0x33, 0x7e, 0x8d, 0x17, 0x67, 0xa5, 0x27, 0xaa, 0x10, 0x19, 0x40, 0xc7,
+	0x0a, 0x89, 0xc6, 0x72, 0xa9, 0xfb, 0xad, 0x91, 0x77, 0xb8, 0x1d, 0x6d, 0x08, 0xfa, 0x10, 0xba,
+	0xeb, 0x0c, 0xa3, 0x49, 0x1f, 0xda, 0x15, 0xac, 0x52, 0x6a, 0x78, 0xfc, 0xb9, 0x05, 0xf0, 0x42,
+	0xa4, 0x78, 0xb9, 0x34, 0x16, 0x25, 0x79, 0x02, 0x3b, 0x6f, 0x44, 0x96, 0x90, 0x1e, 0x2b, 0xbb,
+	0x61, 0x75, 0x71, 0xec, 0x79, 0x51, 0x9c, 0xdf, 0xc0, 0x93, 0x67, 0xb0, 0x77, 0xc9, 0x97, 0x6e,
+	0x55, 0xb2, 0xcf, 0xfe, 0xfa, 0x34, 0x56, 0xf7, 0xd8, 0x68, 0x8f, 0xa1, 0x5b, 0xdb, 0xdf, 0x46,
+	0xaf, 0xfe, 0x97, 0xe0, 0x37, 0x49, 0x46, 0xd3, 0xe0, 0xc3, 0xd7, 0x9f, 0x1f, 0x5b, 0x7d, 0xd2,
+	0x0b, 0xaf, 0x73, 0x6e, 0x95, 0x39, 0x2a, 0x46, 0x43, 0xc3, 0x97, 0xef, 0xaf, 0xdc, 0xc3, 0xce,
+	0xd7, 0xc5, 0x9e, 0xa3, 0x25, 0x07, 0xff, 0x24, 0x6d, 0x5a, 0xf7, 0x07, 0xcd, 0xa2, 0xd1, 0xe3,
+	0xfd, 0xdb, 0xef, 0xc1, 0xd6, 0xed, 0x2a, 0xf0, 0xbe, 0xac, 0x02, 0xef, 0xdb, 0x2a, 0xf0, 0x3e,
+	0xfd, 0x08, 0xb6, 0xde, 0x6d, 0x73, 0x2d, 0x26, 0xbb, 0x6e, 0xb3, 0xc7, 0x7f, 0x02, 0x00, 0x00,
+	0xff, 0xff, 0x7d, 0x36, 0x83, 0x57, 0xc4, 0x02, 0x00, 0x00,
 }
 
 // Reference imports to suppress errors if they are not otherwise used.
@@ -240,180 +240,180 @@ var _ grpc.ClientConn
 // is compatible with the grpc package it is being compiled against.
 const _ = grpc.SupportPackageIsVersion4
 
-// DemoClient is the client API for Demo service.
+// FileSystemClient is the client API for FileSystem service.
 //
 // For semantics around ctx use and closing/ending streaming RPCs, please refer to https://godoc.org/google.golang.org/grpc#ClientConn.NewStream.
-type DemoClient interface {
+type FileSystemClient interface {
 	Ping(ctx context.Context, in *empty.Empty, opts ...grpc.CallOption) (*empty.Empty, error)
 	SayHello(ctx context.Context, in *HelloReq, opts ...grpc.CallOption) (*empty.Empty, error)
 	SayHelloURL(ctx context.Context, in *HelloReq, opts ...grpc.CallOption) (*HelloResp, error)
 	MediaIDGet(ctx context.Context, in *MediaIDReq, opts ...grpc.CallOption) (*MediaIDResp, error)
 }
 
-type demoClient struct {
+type fileSystemClient struct {
 	cc *grpc.ClientConn
 }
 
-func NewDemoClient(cc *grpc.ClientConn) DemoClient {
-	return &demoClient{cc}
+func NewFileSystemClient(cc *grpc.ClientConn) FileSystemClient {
+	return &fileSystemClient{cc}
 }
 
-func (c *demoClient) Ping(ctx context.Context, in *empty.Empty, opts ...grpc.CallOption) (*empty.Empty, error) {
+func (c *fileSystemClient) Ping(ctx context.Context, in *empty.Empty, opts ...grpc.CallOption) (*empty.Empty, error) {
 	out := new(empty.Empty)
-	err := c.cc.Invoke(ctx, "/demo.service.v1.Demo/Ping", in, out, opts...)
+	err := c.cc.Invoke(ctx, "/demo.service.v1.FileSystem/Ping", in, out, opts...)
 	if err != nil {
 		return nil, err
 	}
 	return out, nil
 }
 
-func (c *demoClient) SayHello(ctx context.Context, in *HelloReq, opts ...grpc.CallOption) (*empty.Empty, error) {
+func (c *fileSystemClient) SayHello(ctx context.Context, in *HelloReq, opts ...grpc.CallOption) (*empty.Empty, error) {
 	out := new(empty.Empty)
-	err := c.cc.Invoke(ctx, "/demo.service.v1.Demo/SayHello", in, out, opts...)
+	err := c.cc.Invoke(ctx, "/demo.service.v1.FileSystem/SayHello", in, out, opts...)
 	if err != nil {
 		return nil, err
 	}
 	return out, nil
 }
 
-func (c *demoClient) SayHelloURL(ctx context.Context, in *HelloReq, opts ...grpc.CallOption) (*HelloResp, error) {
+func (c *fileSystemClient) SayHelloURL(ctx context.Context, in *HelloReq, opts ...grpc.CallOption) (*HelloResp, error) {
 	out := new(HelloResp)
-	err := c.cc.Invoke(ctx, "/demo.service.v1.Demo/SayHelloURL", in, out, opts...)
+	err := c.cc.Invoke(ctx, "/demo.service.v1.FileSystem/SayHelloURL", in, out, opts...)
 	if err != nil {
 		return nil, err
 	}
 	return out, nil
 }
 
-func (c *demoClient) MediaIDGet(ctx context.Context, in *MediaIDReq, opts ...grpc.CallOption) (*MediaIDResp, error) {
+func (c *fileSystemClient) MediaIDGet(ctx context.Context, in *MediaIDReq, opts ...grpc.CallOption) (*MediaIDResp, error) {
 	out := new(MediaIDResp)
-	err := c.cc.Invoke(ctx, "/demo.service.v1.Demo/MediaIDGet", in, out, opts...)
+	err := c.cc.Invoke(ctx, "/demo.service.v1.FileSystem/MediaIDGet", in, out, opts...)
 	if err != nil {
 		return nil, err
 	}
 	return out, nil
 }
 
-// DemoServer is the server API for Demo service.
-type DemoServer interface {
+// FileSystemServer is the server API for FileSystem service.
+type FileSystemServer interface {
 	Ping(context.Context, *empty.Empty) (*empty.Empty, error)
 	SayHello(context.Context, *HelloReq) (*empty.Empty, error)
 	SayHelloURL(context.Context, *HelloReq) (*HelloResp, error)
 	MediaIDGet(context.Context, *MediaIDReq) (*MediaIDResp, error)
 }
 
-// UnimplementedDemoServer can be embedded to have forward compatible implementations.
-type UnimplementedDemoServer struct {
+// UnimplementedFileSystemServer can be embedded to have forward compatible implementations.
+type UnimplementedFileSystemServer struct {
 }
 
-func (*UnimplementedDemoServer) Ping(ctx context.Context, req *empty.Empty) (*empty.Empty, error) {
+func (*UnimplementedFileSystemServer) Ping(ctx context.Context, req *empty.Empty) (*empty.Empty, error) {
 	return nil, status.Errorf(codes.Unimplemented, "method Ping not implemented")
 }
-func (*UnimplementedDemoServer) SayHello(ctx context.Context, req *HelloReq) (*empty.Empty, error) {
+func (*UnimplementedFileSystemServer) SayHello(ctx context.Context, req *HelloReq) (*empty.Empty, error) {
 	return nil, status.Errorf(codes.Unimplemented, "method SayHello not implemented")
 }
-func (*UnimplementedDemoServer) SayHelloURL(ctx context.Context, req *HelloReq) (*HelloResp, error) {
+func (*UnimplementedFileSystemServer) SayHelloURL(ctx context.Context, req *HelloReq) (*HelloResp, error) {
 	return nil, status.Errorf(codes.Unimplemented, "method SayHelloURL not implemented")
 }
-func (*UnimplementedDemoServer) MediaIDGet(ctx context.Context, req *MediaIDReq) (*MediaIDResp, error) {
+func (*UnimplementedFileSystemServer) MediaIDGet(ctx context.Context, req *MediaIDReq) (*MediaIDResp, error) {
 	return nil, status.Errorf(codes.Unimplemented, "method MediaIDGet not implemented")
 }
 
-func RegisterDemoServer(s *grpc.Server, srv DemoServer) {
-	s.RegisterService(&_Demo_serviceDesc, srv)
+func RegisterFileSystemServer(s *grpc.Server, srv FileSystemServer) {
+	s.RegisterService(&_FileSystem_serviceDesc, srv)
 }
 
-func _Demo_Ping_Handler(srv interface{}, ctx context.Context, dec func(interface{}) error, interceptor grpc.UnaryServerInterceptor) (interface{}, error) {
+func _FileSystem_Ping_Handler(srv interface{}, ctx context.Context, dec func(interface{}) error, interceptor grpc.UnaryServerInterceptor) (interface{}, error) {
 	in := new(empty.Empty)
 	if err := dec(in); err != nil {
 		return nil, err
 	}
 	if interceptor == nil {
-		return srv.(DemoServer).Ping(ctx, in)
+		return srv.(FileSystemServer).Ping(ctx, in)
 	}
 	info := &grpc.UnaryServerInfo{
 		Server:     srv,
-		FullMethod: "/demo.service.v1.Demo/Ping",
+		FullMethod: "/demo.service.v1.FileSystem/Ping",
 	}
 	handler := func(ctx context.Context, req interface{}) (interface{}, error) {
-		return srv.(DemoServer).Ping(ctx, req.(*empty.Empty))
+		return srv.(FileSystemServer).Ping(ctx, req.(*empty.Empty))
 	}
 	return interceptor(ctx, in, info, handler)
 }
 
-func _Demo_SayHello_Handler(srv interface{}, ctx context.Context, dec func(interface{}) error, interceptor grpc.UnaryServerInterceptor) (interface{}, error) {
+func _FileSystem_SayHello_Handler(srv interface{}, ctx context.Context, dec func(interface{}) error, interceptor grpc.UnaryServerInterceptor) (interface{}, error) {
 	in := new(HelloReq)
 	if err := dec(in); err != nil {
 		return nil, err
 	}
 	if interceptor == nil {
-		return srv.(DemoServer).SayHello(ctx, in)
+		return srv.(FileSystemServer).SayHello(ctx, in)
 	}
 	info := &grpc.UnaryServerInfo{
 		Server:     srv,
-		FullMethod: "/demo.service.v1.Demo/SayHello",
+		FullMethod: "/demo.service.v1.FileSystem/SayHello",
 	}
 	handler := func(ctx context.Context, req interface{}) (interface{}, error) {
-		return srv.(DemoServer).SayHello(ctx, req.(*HelloReq))
+		return srv.(FileSystemServer).SayHello(ctx, req.(*HelloReq))
 	}
 	return interceptor(ctx, in, info, handler)
 }
 
-func _Demo_SayHelloURL_Handler(srv interface{}, ctx context.Context, dec func(interface{}) error, interceptor grpc.UnaryServerInterceptor) (interface{}, error) {
+func _FileSystem_SayHelloURL_Handler(srv interface{}, ctx context.Context, dec func(interface{}) error, interceptor grpc.UnaryServerInterceptor) (interface{}, error) {
 	in := new(HelloReq)
 	if err := dec(in); err != nil {
 		return nil, err
 	}
 	if interceptor == nil {
-		return srv.(DemoServer).SayHelloURL(ctx, in)
+		return srv.(FileSystemServer).SayHelloURL(ctx, in)
 	}
 	info := &grpc.UnaryServerInfo{
 		Server:     srv,
-		FullMethod: "/demo.service.v1.Demo/SayHelloURL",
+		FullMethod: "/demo.service.v1.FileSystem/SayHelloURL",
 	}
 	handler := func(ctx context.Context, req interface{}) (interface{}, error) {
-		return srv.(DemoServer).SayHelloURL(ctx, req.(*HelloReq))
+		return srv.(FileSystemServer).SayHelloURL(ctx, req.(*HelloReq))
 	}
 	return interceptor(ctx, in, info, handler)
 }
 
-func _Demo_MediaIDGet_Handler(srv interface{}, ctx context.Context, dec func(interface{}) error, interceptor grpc.UnaryServerInterceptor) (interface{}, error) {
+func _FileSystem_MediaIDGet_Handler(srv interface{}, ctx context.Context, dec func(interface{}) error, interceptor grpc.UnaryServerInterceptor) (interface{}, error) {
 	in := new(MediaIDReq)
 	if err := dec(in); err != nil {
 		return nil, err
 	}
 	if interceptor == nil {
-		return srv.(DemoServer).MediaIDGet(ctx, in)
+		return srv.(FileSystemServer).MediaIDGet(ctx, in)
 	}
 	info := &grpc.UnaryServerInfo{
 		Server:     srv,
-		FullMethod: "/demo.service.v1.Demo/MediaIDGet",
+		FullMethod: "/demo.service.v1.FileSystem/MediaIDGet",
 	}
 	handler := func(ctx context.Context, req interface{}) (interface{}, error) {
-		return srv.(DemoServer).MediaIDGet(ctx, req.(*MediaIDReq))
+		return srv.(FileSystemServer).MediaIDGet(ctx, req.(*MediaIDReq))
 	}
 	return interceptor(ctx, in, info, handler)
 }
 
-var _Demo_serviceDesc = grpc.ServiceDesc{
-	ServiceName: "demo.service.v1.Demo",
-	HandlerType: (*DemoServer)(nil),
+var _FileSystem_serviceDesc = grpc.ServiceDesc{
+	ServiceName: "demo.service.v1.FileSystem",
+	HandlerType: (*FileSystemServer)(nil),
 	Methods: []grpc.MethodDesc{
 		{
 			MethodName: "Ping",
-			Handler:    _Demo_Ping_Handler,
+			Handler:    _FileSystem_Ping_Handler,
 		},
 		{
 			MethodName: "SayHello",
-			Handler:    _Demo_SayHello_Handler,
+			Handler:    _FileSystem_SayHello_Handler,
 		},
 		{
 			MethodName: "SayHelloURL",
-			Handler:    _Demo_SayHelloURL_Handler,
+			Handler:    _FileSystem_SayHelloURL_Handler,
 		},
 		{
 			MethodName: "MediaIDGet",
-			Handler:    _Demo_MediaIDGet_Handler,
+			Handler:    _FileSystem_MediaIDGet_Handler,
 		},
 	},
 	Streams:  []grpc.StreamDesc{},
