# api/api.swagger.json
@@ -16,9 +16,9 @@
         "application/json"
     ],
     "paths": {
-        "/demo.service.v1.Demo/MediaIDGet": {
+        "/demo.service.v1.FileSystem/MediaIDGet": {
             "get": {
-                "summary": "/demo.service.v1.Demo/MediaIDGet",
+                "summary": "/demo.service.v1.FileSystem/MediaIDGet",
                 "responses": {
                     "200": {
                         "description": "A successful response.",
@@ -53,13 +53,13 @@
                     }
                 ],
                 "tags": [
-                    "demo.service.v1.Demo"
+                    "demo.service.v1.FileSystem"
                 ]
             }
         },
-        "/demo.service.v1.Demo/Ping": {
+        "/demo.service.v1.FileSystem/Ping": {
             "get": {
-                "summary": "/demo.service.v1.Demo/Ping",
+                "summary": "/demo.service.v1.FileSystem/Ping",
                 "responses": {
                     "200": {
                         "description": "A successful response.",
@@ -80,13 +80,13 @@
                     }
                 },
                 "tags": [
-                    "demo.service.v1.Demo"
+                    "demo.service.v1.FileSystem"
                 ]
             }
         },
-        "/demo.service.v1.Demo/SayHello": {
+        "/demo.service.v1.FileSystem/SayHello": {
             "get": {
-                "summary": "/demo.service.v1.Demo/SayHello",
+                "summary": "/demo.service.v1.FileSystem/SayHello",
                 "responses": {
                     "200": {
                         "description": "A successful response.",
@@ -115,7 +115,7 @@
                     }
                 ],
                 "tags": [
-                    "demo.service.v1.Demo"
+                    "demo.service.v1.FileSystem"
                 ]
             }
         },
@@ -150,7 +150,7 @@
                     }
                 ],
                 "tags": [
-                    "demo.service.v1.Demo"
+                    "demo.service.v1.FileSystem"
                 ]
             }
         }
